<?xml version="1.0"?>
<package>
  <name>tensorswarm</name>
  <version>0.0.0</version>
  <description>Reinforcement learning framwork for robot swarms.</description>
  <maintainer email="ap@deeplearningrobotics.ai">DeepLearningRobotics</maintainer>
  <license>Apache 2.0</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
